# srv-crashfix

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-build-and-release.yml
includes/: headers.hpp  urmem.hpp
source/: main.cpp  main.def
